--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Pokémon Utility App</title>
+  <title>PBO Helper App</title>
   <style>
     body { font-family: Arial, sans-serif; margin: 20px; }
     h2 { margin-top: 40px; }
@@ -278,3 +278,4 @@ document.getElementById("searchPvp").addEventListener("click", () => {
 </script>
 </body>
 </html>
+
